<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/control_panel_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/control_panel_rewind_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@mipmap/rewind_icon"
        android:scaleType="fitCenter"
        android:contentDescription="@string/rewind_button_description" />

    <ImageButton
        android:id="@+id/control_panel_play_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@mipmap/play_icon"
        android:scaleType="fitCenter"
        android:contentDescription="@string/play_button_description" />

    <ImageButton
        android:id="@+id/control_panel_next_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@mipmap/next_icon"
        android:scaleType="fitCenter"
        android:contentDescription="@string/next_button_description" />

</LinearLayout>